# AI-learning

./: .env  .gitignore  main.py  pyproject.toml  vector_db.ipynb
agent_practice/single_agent/: Memory_agent.ipynb  product_query_agent.ipynb
rag_basics/: Untitled.ipynb  Untitled1.ipynb
