[project]
name = "tutorial-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=0.3.0",
    "langchain-huggingface",
    "langchain-chroma",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "ipykernel>=7.2.0",
    "notebook>=7.5.6",
    "chromadb",
    "langchain-community>=0.4.2",
    "unstructured>=0.24.0",
    "pypdf>=3.9.0",
    "sentence-transformers",
    "torch",
]
